@@ -26,6 +26,7 @@ systemd System and Service Manager
  	- remove “bus_remove_match_internal_kernel” function;
  	- remove “bus_add_match_internal_kernel” function;
  	- remove “bus_kernel_parse_unique_name” function;
+ 	- remove “kdbus_translate_request_name_flags” function;
  * loginctl:
  	- remove “machine” argument option;
  * systemd-analyze:
